added css for contact page & footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,3 +115,30 @@ h4{
 input, textarea{
     width: 960px;
 }
+
+button{
+    text-decoration: none;
+    border: none;
+    background-color: #4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 5px 10px;
+    color: #ffffff;
+}
+
+footer{
+    clear: both;
+    width: 100%;
+    background-color: #777777;
+    border-top: 8px solid #4aaaa5;
+    position: fixed;
+    margin: 0;
+    bottom: 0;
+    text-align: center;
+    text-align: bottom;
+    height: 50px;
+}
+
+h3{
+    font-size: 12px;
+    color: #ffffff;
+}
