--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,56 @@ button{
     color: #ffffff;
 }
 
+.a_portfolio{
+    position: relative;
+    display: block;
+    width: 200px;
+    height: 200px;
+    background: #ffffff;
+    margin: 0;
+}
+
+.img_portfolio{
+    width: 200px;
+    height: 200px;
+}
+
+.span_portfolio{
+    position: absolute;
+    bottom: 20px;
+    right: center;
+    width: 200px;
+    height: 40px;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    font-size: 20px;
+    text-align: center;
+    vertical-align: center;
+}
+
+#portfolio_1{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    background: #ffffff;
+}
+
+#portfolio_2{
+    position: relative;
+}
+
+#portfolio_3{
+    position: relative;
+}
+
+#portfolio_4{
+    position: relative;
+}
+
+#portfolio_5{
+    position: relative;
+}
+
 footer{
     clear: both;
     width: 100%;
