--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,8 @@
     box-sizing: border-box;
 }
 
+/* Main body CSS */
+
 body{
     font-family: Arial, Helvetica, sans-serif;
     color: #777777;
@@ -28,6 +30,8 @@ h1, h2, h3, h4{
     padding: 5px 5px 10px 5px;
     height: 0 auto;
 }
+
+/* Header */
 
 header{
     background-color: #ffffff;
@@ -86,6 +90,8 @@ header::after{
     text-decoration: none;
 }
 
+/* About Me page */
+
 #profile_picture{
     width: 200px;
     height: 200px;
@@ -107,6 +113,8 @@ header::after{
     clear: both;
 }
 
+/* Contact page */
+
 h4{
     color: #777777;
     font-size: 20px;
@@ -125,6 +133,13 @@ button{
     color: #ffffff;
 }
 
+button:hover{
+    border-top: 1px solid red;
+    border-left: 1px solid red;
+}
+
+/* Portfolio Page */
+
 .a_portfolio{
     position: relative;
     display: block;
@@ -132,6 +147,11 @@ button{
     height: 200px;
     background: #ffffff;
     margin: 0;
+}
+
+.a_portfolio:hover{
+    border-top: 2px solid red;
+    border-left: 2px solid red;
 }
 
 .img_portfolio{
@@ -152,28 +172,42 @@ button{
     vertical-align: center;
 }
 
-#portfolio_1{
+#portfolio_1, #portfolio_2, #portfolio_3, #portfolio_4, #portfolio_5{
     position: relative;
     width: 200px;
     height: 200px;
     background: #ffffff;
 }
 
+#portfolio_1{
+    left: 20px;
+    border-right: 20px;
+}
+
 #portfolio_2{
-    position: relative;
+    left: 240px;
+    border-right: 20px;
+    bottom: 200px;
 }
 
 #portfolio_3{
-    position: relative;
+    left: 460px;
+    bottom: 400px;
 }
 
 #portfolio_4{
-    position: relative;
+    left: 20px;
+    bottom: 380px;
+    border-right: 20px;
 }
 
 #portfolio_5{
-    position: relative;
+    left: 240px;
+    border-right: 20px;
+    bottom: 580px;
 }
+
+/* Footer */
 
 footer{
     clear: both;
