--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,10 @@ h1, h2, h3, h4{
     font-size: 24px;
 }
 
+h4{
+    margin: 10px 0px 10px 0px;
+}
+
 #content{
     width: 970px;
     margin: 0 auto;
